feat: restructure DynamicLoadingSQLParserParameterizedTest